--- a/CodigoApp/html/Editar.html
+++ b/CodigoApp/html/Editar.html
@@ -4,37 +4,47 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/editar.css">
+    <link rel="stylesheet" type="text/css" href="../css/teachme.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    <title>Editar</title>
+    <meta name="viewport" content="width=device-width, user-scalable=yes"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme | Editar</title>
   </head>
-  <body>
+  <body id="editarpage">
+    <div id="barra">
+      <a href="home.html"><img src="../img/flecha_atras_blc.png" id="atras"></a>
+      <h1 id="nomb">Editar</h1>
+    </div>
 
-    <img id="pro" src="../img/pic.jpg">
-    <a href="home.html"><img src="../img/flecha_atras.png" id="atras"> </a>
-
+    <img id="pro" src="../img/pic.jpg"/>
     <div id="edit">
       <h2>Nom</h2>
-      <input class="box" type="text" placeholder="Steven"/>
+      <input class="box" type="text" placeholder="Ray"/>
     </div>
 
     <div id="edit">
       <h2>Cognoms</h2>
-      <input class="box" type="text" placeholder="Garzon Muñoz"/>
+      <input class="box" type="text" placeholder="Smith Muñoz"/>
     </div>
 
     <div id="edit">
       <h2>Correu electrònic</h2>
-      <input class="box" type="text" placeholder="Stevengarzon@gmail.com"/>
+      <input class="box" type="text" placeholder="RSmith@gmail.com"/>
     </div>
 
     <div id="edit">
       <h2>Ubicació</h2>
-      <input class="box" type="text" placeholder="Steven"/>
+      <input class="box" type="text" placeholder="Barcelona, Spain"/>
     </div>
 
-    <div id="guarda">
+    <a href="perfil.html"><div id="guarda">
       Guardar canvis
-    </div>
+    </div></a>
 
 
 
