--- a/CodigoApp/html/Login.html
+++ b/CodigoApp/html/Login.html
@@ -3,25 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/Login.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../css/Login.css"> -->
+    <link rel="stylesheet" type="text/css" href="../css/teachme.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme</title>
   </head>
-  <body>
-
+  <body id="loginscreen">
     <img id="fondo" src="../img/fondo.png" />
     <a href="signup.html"><div id="register">Registra't</div></a>
     <img id="logotm" src="../img/logotm.png"/>
     <h1 id="nom">Teachme</h1>
 
-    <form>
+    <form id="loginform">
       <input class="box" type="text" placeholder="User"></input>
       <input class="box" type="text" placeholder="contrasenya"></input>
     </form>
-    <a href="Roll.html"><div id="sessio" type="submit">Inicia</div></a>
-
-    <a href="../html/recover.html"><h3>
-  has oblidat la teva contrasenya?</h3></a>
+    <a class="butons" href="Roll.html"><div id="sessio" type="submit">Inicia</div></a>
+  </br>
+    <a class="butons" href="recover.html"><h3 id="olvido">has oblidat la teva contrasenya?</h3></a>
 
   </body>
 </html>
