--- a/CodigoApp/html/Perfil_profe.html
+++ b/CodigoApp/html/Perfil_profe.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" type="text/css" href="../css/perfil.css"> -->
     <link rel="stylesheet" type="text/css" href="../css/teachme.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -16,15 +14,15 @@
     <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
     <title>Teachme | Perfil</title>
   </head>
-  <body id="perfilpage">
+  <body id="perfilprofepage">
     <img id="back" src="../img/fondo.jpg">
     <img id="pro" src="../img/pic.jpg">
 
-    <h3 id="user">Ray Smith</h3>
-    <h5 id="rol">Alumne</h5>
+    <h3 id="user">Jordi Calatayud</h3>
+    <h5 id="rol">Professor</h5>
     <a href="home.html"><img src="../img/flecha_atras_blc.png" id="atras"> </a>
     <div id="submenu">
-      <ul id="apartats">
+      <ul>
           <li class="cv">
               <a class="info">
                 Descripció
@@ -44,7 +42,7 @@
     </div>
     <div id="contenidor_descripcio">
 
-      <p id="estudios">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve.</p>
   </div>
 
   <a href="Editar.html"><div id="editar">Editar</div></a>
