--- a/CodigoApp/html/Premium.html
+++ b/CodigoApp/html/Premium.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" type="text/css" href="../css/Roll.css"> -->
     <link rel="stylesheet" type="text/css" href="../css/teachme2.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="yes">
     <link rel="icon" sizes="192x192" href="../img/icon.png">
     <link rel="icon" sizes="512x512" href="../img/icon.png">
     <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
-    <title>Teachme</title>
+    <title>Premium</title>
   </head>
-  <body id="roll">
 
-      <h1 id="escull">Escull el teu tipus<br/>d'usuari</h1>
-      <div id="botons">
-      <a href="home.html"><div id="alumno">Alumne</div></a>
-      <a href="home.html"><div id="profe">Professor</div></a>
-      </div>
+  <body id="premium">
+      <h1 id="codi">Introduïu el vostre codi premium...</h1>
+
+      <input type="text" name="Codigo" id="caja" placeholder=""></input>
+      <a href="home.html"><div id="buton">Accedir</div></a>
 
   </body>
+
+
 </html>
