--- a/CodigoApp/html/Signup.html
+++ b/CodigoApp/html/Signup.html
@@ -3,14 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/Signup.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../css/signup.css"> -->
+    <link rel="stylesheet" type="text/css" href="../css/teachme2.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme | Registre</title>
   </head>
-  <body>
-    <h1>Registra't!</h1>
+  <body id="signup">
+    <h1 id="registrate">Registra't!</h1>
 
-    <form>
+    <form id="formulario">
       <input class="box" type="text" placeholder="Nom"></input>
       <input class="box" type="text" placeholder="Cognom"></input>
       <input class="box" type="email" placeholder="Correu Electrònic"></input>
@@ -20,13 +28,13 @@
 
     <input type="checkbox" id="toggle">
       <label for="toggle" id="register">Registra't</label>
-      <dialog>
+      <dialog id="confirm">
         <h3>Termes d'ús i condicions</h3>
-        <p>
+        <p id="textolegal">
         És requisit necessari per a l'adquisició dels productes que s'ofereixen en aquest lloc, que llegeixi i accepti els següents Termes i Condicions que dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor a continuació es redacten. L'ús dels nostres serveis així com la compra dels nostres productes implicarà que vostè ha llegit i acceptat reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat  els Termes i Condicions d'Ús en el present document. </br>Totes els productes són oferts pel nostre lloc web poguessin ser creades, cobrades, enviades o presentades per una pàgina web tercera i en tal cas estarien subjectes als seus propis Termes i Condicions.
         </p>
         <label for="toggle" id="cancela">Cancel·lar</label>
-        <a href="login.html"><div class="accept">Acceptar</div></a>
+        <a id="boton_aceptar" href="login.html"><div class="accept">Acceptar</div></a>
       </dialog>
     </input>
 
