--- a/CodigoApp/html/ajuda.html
+++ b/CodigoApp/html/ajuda.html
@@ -3,39 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/ajuda.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../css/ajuda.css"> -->
+    <link rel="stylesheet" type="text/css" href="../css/barra:atras.css">
+    <link rel="stylesheet" type="text/css" href="../css/teachme.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title></title>
+    <meta name="viewport" content="width=device-width, user-scalable=no"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme | Ajuda</title>
   </head>
-  <body>
-    <div id="nav">
-      <nav role="navigation">
-        <h3>Ajuda</h3>
-        <div id="menuToggle">
-          <input type="checkbox" />
-            <span></span>
-            <span></span>
-            <span></span>
-          </input>
-
-          <ul id="menu">
-            <div id="fotoperfil"></div>
-            <h1>Elver Galarga</h1>
-            <a href="home.html"><li>Home</li></a>
-            <a href="Perfil.html"><li>Perfil</li></a>
-            <a href="tips.html"><li>Tips</li></a>
-            <a href="contactos.html"><li>Xat</li></a>
-            <a href="ajustes.html"><li>Configuració</li></a>
-            <a href="ajuda.html"><li>Ajuda</li></a>
-            <a href="Login.html"><li>Desconectar</li></a>
-          </ul>
-        </div>
-      </nav>
+  <body id="ajuda">
+    <div id="barra">
+      <a href="home.html"><img src="../img/flecha_atras_blc.png" id="atras"></a>
+      <h1 id="nomb">Ajuda</h1>
     </div>
 
     <img id="dona" src="../img/dona.png" />
-    <h1 id="text">Com et<br/> podem ajudar?</h1>
+    <h2 id="text">Com et podem ajudar?</h2>
 
     <div id="ajudas">
 
@@ -44,7 +32,7 @@
       </div>
 
       <div id="box2">
-        <p><a href="tips.html">Envieu-nos un<br/>correu electrònic</a></p>
+        <p>Envieu-nos un<br/>correu electrònic</p>
       </div>
 
     </div>
