--- a/CodigoApp/html/contactos.html
+++ b/CodigoApp/html/contactos.html
@@ -3,25 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/contactos.css">
+    <script src="../js/xat.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="../css/contactos.css"> -->
+    <link rel="stylesheet" type="text/css" href="../css/barra:atras.css">
+    <link rel="stylesheet" type="text/css" href="../css/teachme.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    <title></title>
+    <meta name="viewport" content="width=device-width, user-scalable=no"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme | Contactes</title>
   </head>
-  <body>
-
-
+  <body id="contactspage">
 
     <div id="barra">
-      <a href="home.html"><img src="../img/flecha_atras.png" id="atras"> </a>
-      <h1>Contactos</h1>
+      <a href="home.html"><img src="../img/flecha_atras_blc.png" id="atras"></a>
+      <h1 id="nomb">Contactes</h1>
     </div>
 
   <div id="contingut">
     <div id="contacts">
       <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic.jpg" />
-        <h3>Jose Ferrer</h3>
-        <p>Hola, como te va?</p>
+        <h3 class="nombre">Jose Ferrer</h3>
+        <p class="mensaje">Hola, com et va?</p>
         <div id="online"> </div>
       </div></a>
     </div>
@@ -29,8 +37,8 @@
     <a href="../html/xat.html"><div id="contacts">
       <div class="nom">
         <img src="../img/pic2.jpg" />
-        <h3>Maria Noboa</h3>
-        <p>Hola, como te va?</p>
+        <h3 class="nombre">Maria Noboa</h3>
+        <p class="mensaje">On t'agradaria quedar?</p>
         <div id="online"> </div>
       </div></a>
     </div>
@@ -38,74 +46,39 @@
     <div id="contacts">
       <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic.jpg" />
-        <h3>Ana Paris</h3>
-        <p>Hola, como te va?</p>
-        <div id="online"> </div>
+        <h3 class="nombre">Ana Paris</h3>
+        <p class="mensaje">Quan podem quedar?</p>
+        <div id="online1"> </div>
       </div></a>
     </div>
 
     <div id="contacts">
       <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic2.jpg" />
-        <h3>Francisco Palacio</h3>
-        <p>Hola, como te va?</p>
+        <h3 class="nombre">Francisco Palacio</h3>
+        <p class="mensaje">Molt bé i tu?</p>
         <div id="online"> </div>
       </div></a>
     </div>
 
     <div id="contacts">
       <a href="../html/xat.html"><div class="nom">
-        <img src="../img/pic2.jpg" />
-        <h3>Luna</h3>
-        <p>Hola, como te va?</p>
-        <div id="online"> </div>
+        <img src="../img/pic3.jpg" />
+        <h3 class="nombre">Luna</h3>
+        <p class="mensaje">Estaràs disponible el dimarts?</p>
+        <div id="online1"> </div>
       </div></a>
     </div>
 
     <div id="contacts">
       <a href="../html/xat.html"><div class="nom">
         <img src="../img/pic.jpg" />
-        <h3>Pilar</h3>
-        <p>Hola, como te va?</p>
-        <div id="online"> </div>
+        <h3 class="nombre">Pilar</h3>
+        <p class="mensaje">Gràcies per les lliçons, van ajudar molt</p>
+        <div id="online1"> </div>
       </div></a>
     </div>
 
-    <div id="contacts">
-      <a href="../html/xat.html"><div class="nom">
-        <img src="../img/pic2.jpg" />
-        <h3>Javier Lacer</h3>
-        <p>Hola, como te va?</p>
-        <div id="online"> </div>
-      </div></a>
-    </div>
-
-    <div id="contacts">
-      <a href="../html/xat.html"><div class="nom">
-        <img src="../img/pic.jpg" />
-        <h3>Daniel Pardo</h3>
-        <p>Hola, como te va?</p>
-        <div id="online"> </div>
-      </div></a>
-    </div>
-
-    <div id="contacts">
-      <a href="../html/xat.html"><div class="nom">
-        <img src="../img/pic2.jpg" />
-        <h3>Amalia Abasto</h3>
-        <p>Hola, como te va?</p>
-        <div id="online"> </div>
-      </div></a>
-    </div>
-
-    <div id="contacts">
-      <a href="../html/xat.html"><div class="nom">
-        <img src="../img/pic.jpg" />
-        <h3>Jimena Beldad</h3>
-        <p>Hola, como te va?</p>
-        <div id="online"> </div>
-      </div></a>
-    </div>
 
 
 
