--- a/CodigoApp/html/home.html
+++ b/CodigoApp/html/home.html
@@ -6,7 +6,14 @@
     <link rel="stylesheet" type="text/css" href="../css/home.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Nunito">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme   | Inici</title>
   </head>
   <body>
 
@@ -22,35 +29,69 @@
           </input>
 
           <ul id="menu">
-            <div id="fotoperfil"></div>
-            <h1>Elver Galarga</h1>
-            <a href="home.html"><li>Home</li></a>
+            <a href="Perfil.html"><div id="fotoperfil"></div></a>
+            <h1>Ray Smith</h1>
+            <a href="home.html"><li>Inici</li></a>
             <a href="Perfil.html"><li>Perfil</li></a>
             <a href="tips.html"><li>Tips</li></a>
             <a href="contactos.html"><li>Xat</li></a>
             <a href="ajustes.html"><li>Configuració</li></a>
             <a href="ajuda.html"><li>Ajuda</li></a>
+            <a href="premium.html"><li>Premium</li></a>
             <a href="Login.html"><li>Desconectar</li></a>
           </ul>
         </div>
       </nav>
     </div>
+    <div id="contenido">
 
-    <div class="contenedor" id="post1">
+
+    <a href="Perfil_profe.html"><div class="contenedor" id="arts">
       <h2>Professor d'història</br> de l'art</h2>
-      <p>Troba el millor professor especialitzat en la història de l'art</p>
-    </div>
+      <p>Troba el millor professor especialitzat en la història de l'art.</p>
+    </div></a>
 
-    <div class="contenedor" id="post2">
+    <a href="Perfil_profe.html">  <div class="contenedor" id="cloud">
       <h2>Professors de </br>Creative Cloud</h2>
-      <p>Troba un professor amb coneixements sobre el paquet de Adobe per ajudar-vos a crear els vostres dissenys i editar les vostres imatges</p>
+      <p>Troba un professor amb coneixements sobre el paquet de Adobe.</p>
+    </div></a>
+
+    <div class="contenedor" id="ingles">
+      <h2>Professor</br> d'anglès</h2>
+      <p>El millor professor d’anglès us està esperant a Teachme.</p>
     </div>
 
-    <div class="contenedor" id="post3">
+    <div class="contenedor" id="EIE">
       <h2>Professor</br> d'anglès</h2>
       <p>El millor professor d’anglès us està esperant a Teachme</p>
     </div>
 
+    <div class="contenedor" id="FOL">
+      <h2>Professor</br> d'anglès</h2>
+      <p>El millor professor d’anglès us està esperant a Teachme</p>
+    </div>
+
+    <div class="contenedor" id="ingles">
+      <h2>Professor</br> d'anglès</h2>
+      <p>El millor professor d’anglès us està esperant a Teachme</p>
+    </div>
+
+    <div class="contenedor" id="ingles">
+      <h2>Professor</br> d'anglès</h2>
+      <p>El millor professor d’anglès us està esperant a Teachme</p>
+    </div>
+
+    <div class="contenedor" id="EIE">
+      <h2>Professor</br> d'anglès</h2>
+      <p>El millor professor d’anglès us està esperant a Teachme</p>
+    </div>
+
+    <div class="contenedor" id="cloud">
+      <h2>Professors de </br>Creative Cloud</h2>
+      <p>Troba un professor amb coneixements sobre el paquet de Adobe.</p>
+    </div>
+
+</div>
 
   </body>
 </html>
