--- a/CodigoApp/html/xat.html
+++ b/CodigoApp/html/xat.html
@@ -6,10 +6,17 @@
     <link rel="stylesheet" type="text/css" href="../css/xat.css">
     <script type="text/javascript" src="../javascript/xat.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    <title>Xat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme   | Xat</title>
   </head>
-  <body>
-
+  <body id="xatpage">
+  <a href="contactos.html"><img src="../img/flecha_atras_blc.png" id="atras"> </a>
     <div class="chat">
       <div class="chat-title">
         <h1>Fabio Ottaviani</h1>
@@ -24,9 +31,7 @@
         <button type="submit" class="message-submit">Send</button>
       </div>
 
-    </div
-
-
+    </div>
 
   </body>
 </html>
