--- a/CodigoApp/index.html
+++ b/CodigoApp/index.html
@@ -6,12 +6,19 @@
     <meta http-equiv="refresh" content="3; url=html/Login.html">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="300x177" href="img/logo_mag.png">
+    <link rel="icon" sizes="300x177" href="img/logo_mag.png">
+    <link rel="apple-touch-icon" sizes="300x177" href="img/logo_mag.png">
+    <title>Teachme</title>
   </head>
 
   <body>
 
-    <img src="img/logo.png" class="animated jackInTheBox" alt="">
+    <img src="img/logo.png" class="animated pulse infinite" alt=""/>
 
     <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 
