--- a/CodigoApp/html/ajustes.html
+++ b/CodigoApp/html/ajustes.html
@@ -3,91 +3,54 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/ajustes.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../css/ajustes.css"> -->
+    <link rel="stylesheet" type="text/css" href="../css/barra:atras.css">
+    <link rel="stylesheet" type="text/css" href="../css/teachme.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title></title>
+    <meta name="viewport" content="width=device-width, user-scalable=no"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme | Configuració</title>
   </head>
-  <body>
-    <div id="nav">
-      <nav role="navigation">
-        <h3>Configuració</h3>
-        <div id="menuToggle">
-          <input type="checkbox" />
-            <span></span>
-            <span></span>
-            <span></span>
-          </input>
-
-          <ul id="menu">
-            <div id="fotoperfil"></div>
-            <h1>Elver Galarga</h1>
-            <a href="home.html"><li>Home</li></a>
-            <a href="Perfil.html"><li>Perfil</li></a>
-            <a href="tips.html"><li>Tips</li></a>
-            <a href="contactos.html"><li>Xat</li></a>
-            <a href="ajustes.html"><li>Configuració</li></a>
-            <a href="ajuda.html"><li>Ajuda</li></a>
-            <a href="Login.html"><li>Desconectar</li></a>
-          </ul>
-        </div>
-      </nav>
+  <body id="ajustes">
+    <div id="barra">
+      <a href="home.html"><img src="../img/flecha_atras_blc.png" id="atras"></a>
+      <h1 id="nomb">Configuració</h1>
     </div>
 
     <div id="contingut">
-      <div id="contacts">
-        <div class="nom">
-          <h2>Cuenta</h2>
-          <div id="online"></div>
+        <div class="contacts">
+            <h2 class="seccions">Cuenta</h2>
         </div>
-      </div>
 
-    <div id="contacts">
-        <div class="nom">
-          <h2>General</h2>
-          <div id="online"></div>
+        <div class="contacts">
+              <h2 class="seccions">General</h2>
         </div>
-      </div>
-    </div>
 
-    <div id="contacts">
-        <div class="nom">
-          <h2>Notificacions</h2>
-          <div id="online"></div>
+        <div class="contacts">
+              <h2 class="seccions">Notificacions</h2>
         </div>
-      </div>
-    </div>
 
-    <div id="contacts">
-        <div class="nom">
-          <h2>Privadesa</h2>
-          <div id="online"></div>
+        <div class="contacts">
+              <h2 class="seccions">Privadesa</h2>
         </div>
-      </div>
-    </div>
 
-    <div id="contacts">
-        <div class="nom">
-          <h2>Seguretat</h2>
-          <div id="online"></div>
+        <div class="contacts">
+              <h2 class="seccions">Seguretat</h2>
         </div>
-      </div>
-    </div>
 
-    <div id="contacts">
-        <div class="nom">
-          <h2>Centre d'ajuda</h2>
-          <div id="online"></div>
+        <div class="contacts">
+              <h2 class="seccions">Centre d'ajuda</h2>
         </div>
-      </div>
-    </div>
 
-    <div id="contacts">
-        <div class="nom">
-          <h2>Sobre nosaltres</h2>
-          <div id="online"></div>
+        <div class="contacts">
+              <h2 class="seccions">Sobre nosaltres</h2>
         </div>
-      </div>
     </div>
 
   </body>
