--- a/CodigoApp/html/confirmacio.html
+++ b/CodigoApp/html/confirmacio.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/confirmacio.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../css/confirmacio.css"> -->
+    <link rel="stylesheet" type="text/css" href="../css/teachme.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    <title></title>
+    <meta name="viewport" content="width=device-width, user-scalable=yes"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme | Confirmació</title>
   </head>
-  <body>
-    <h1>
-S'ha enviat un correu de confirmació al teu email</h1>
+  <body id="confirma">
+    <h1>S'ha enviat un correu de </br>confirmació al teu email</h1>
 
-    <a href="Login.html"><div id="btincia" type="submit" >Inicia</div></a>
+    <a href="Login.html"><div id="btincia" >Inicia</div></a>
 
   </body>
 </html>
