--- a/CodigoApp/html/tips.html
+++ b/CodigoApp/html/tips.html
@@ -3,54 +3,41 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/tips.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../css/tips.css"> -->
+    <link rel="stylesheet" type="text/css" href="../css/barra:atras.css">
+    <link rel="stylesheet" type="text/css" href="../css/teachme.css">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Nunito">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable="no">
+    <link rel="icon" sizes="192x192" href="../img/icon.png">
+    <link rel="icon" sizes="512x512" href="../img/icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="../img/icon.png">
+    <title>Teachme | Tips </title>
   </head>
-  <body>
+  <body id="tips">
 
-    <div id="nav">
-      <nav role="navigation">
-        <h3>Tips</h3>
-        <div id="menuToggle">
+    <div id="barra">
+      <a href="home.html"><img src="../img/flecha_atras_blc.png" id="atras"/></a>
+      <h1 id="nomb">Tips</h1>
+    </div>
 
-          <input type="checkbox" />
-            <span></span>
-            <span></span>
-            <span></span>
-          </input>
-
-          <ul id="menu">
-            <div id="fotoperfil"></div>
-            <h1>Elver Galarga</h1>
-            <a href="home.html"><li>Home</li></a>
-            <a href="Perfil.html"><li>Perfil</li></a>
-            <a href="tips.html"><li>Tips</li></a>
-            <a href="contactos.html"><li>Xat</li></a>
-            <a href="ajustes.html"><li>Configuració</li></a>
-            <a href="ajuda.html"><li>Ajuda</li></a>
-            <a href="Login.html"><li>Desconectar</li></a>
-          </ul>
+        <div class="contenedor" id="portatil">
+          <h2 class="tituls">Tip 1</h2>
+          <p class="info_profe">A mesura que es desenvolupi la vostra carrera professional, la vostra confiança creixerà, però això no vol dir que pugueu fer menys planificació. Potser no necessiteu <br/>produir els mateixos detalls i <br/>documents que a la formació, <br/>però encara heu de tenir en<br/> compte els aspectes <br/>clau de cada lliçó. </p>
         </div>
-      </nav>
-    </div>
 
-    <div class="contenedor" id="post1">
-      <h2>Tip 1</h2>
-      <p>A mesura que es desenvolupi la vostra carrera professional, la vostra confiança creixerà, però això no vol dir que pugueu fer menys planificació. Potser no necessiteu <br/>produir els mateixos detalls i <br/>documents que a la formació, <br/>però encara heu de tenir en<br/> compte els aspectes <br/>clau de cada lliçó. </p>
-    </div>
+        <div class="contenedor" id="mobil">
+          <h2 class="tituls">Tip 2</h2>
+          <p class="info_profe">Assegureu-vos que els estudiants tinguin informació i orientació clares durant tota la lliçó.</p>
+        </div>
 
-    <div class="contenedor" id="post2">
-      <h2>Tip 2</h2>
-      <p>Assegureu-vos que els estudiants tinguin informació i orientació clares durant tota la lliçó.</p>
-    </div>
-
-    <div class="contenedor" id="post3">
-      <h2>Tip 3</h2>
-      <p>No importa l’edat dels estudiants (nens petits, adolescents, adults joves o adults), la motivació és clau per a l’èxit.</p>
-    </div>
-
+        <div class="contenedor" id="libros">
+          <h2 class="tituls">Tip 3</h2>
+          <p class="info_profe">No importa l’edat dels estudiants (nens petits, adolescents, adults joves o adults), la motivació és clau per a l’èxit.</p>
+        </div>
 
   </body>
 </html>
