--- a/CodigoApp/html/Login.html
+++ b/CodigoApp/html/Login.html
@@ -17,7 +17,7 @@
   </head>
   <body id="loginscreen">
     <img id="fondo" src="../img/fondo.png" />
-    <a href="signup.html"><div id="register">Registra't</div></a>
+    <a href="Signup.html"><div id="register">Registra't</div></a>
     <img id="logotm" src="../img/logotm.png"/>
     <h1 id="nom">Teachme</h1>
 
