--- a/CodigoApp/html/home.html
+++ b/CodigoApp/html/home.html
@@ -37,7 +37,7 @@
             <a href="contactos.html"><li>Xat</li></a>
             <a href="ajustes.html"><li>Configuració</li></a>
             <a href="ajuda.html"><li>Ajuda</li></a>
-            <a href="premium.html"><li>Premium</li></a>
+            <a href="Premium.html"><li>Premium</li></a>
             <a href="Login.html"><li>Desconectar</li></a>
           </ul>
         </div>
