--- a/CodigoApp/html/Signup.html
+++ b/CodigoApp/html/Signup.html
@@ -34,7 +34,7 @@
         És requisit necessari per a l'adquisició dels productes que s'ofereixen en aquest lloc, que llegeixi i accepti els següents Termes i Condicions que dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor a continuació es redacten. L'ús dels nostres serveis així com la compra dels nostres productes implicarà que vostè ha llegit i acceptat reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat  els Termes i Condicions d'Ús en el present document. </br>Totes els productes són oferts pel nostre lloc web poguessin ser creades, cobrades, enviades o presentades per una pàgina web tercera i en tal cas estarien subjectes als seus propis Termes i Condicions.
         </p>
         <label for="toggle" id="cancela">Cancel·lar</label>
-        <a id="boton_aceptar" href="login.html"><div class="accept">Acceptar</div></a>
+        <a id="boton_aceptar" href="Login.html"><div class="accept">Acceptar</div></a>
       </dialog>
     </input>
 
